language/java/AntlrDemo/src/main/java/com/learningjava/antlr/LabeledExpr/LabeledExpr.g4
grammar LabeledExpr;

prog: stat+; // the start rule

stat: expr NEWLINE 			# printExpr
	| ID '=' expr NEWLINE 	# assign
	| NEWLINE 				# blank
	;
	
expr: expr op=('*'|'/') expr 	# MulDiv
	| expr op=('+'|'-') expr 	# AddSub
	| INT 						# int
	| ID 						# id
	| '(' expr ')'				# parens
	;

MUL : '*' ; // assigns token name to '*' used above in grammar
DIV : '/' ;
ADD : '+' ;
SUB : '-' ;

ID: [a-zA-Z]+ ;
INT: [0-9]+;
NEWLINE: '\r' ? '\n';
WS: [ \t]+ ->skip;
